# BlueFTC

./: Matlab2021b-2023b_env.yml  README.md  pyproject.toml
examples/: credentials.py  read_example.py
src/blueftc/: BlueFTController.py  BlueforsController.py  blueforscontrol_values.json  logging.conf
src/matlab/: BlueForsController.m  BlueForsTempControl.m  BlueForsTempControl_2021.m  BlueForsTempControl_2022.m  Logger.mat
testing/: basic_test.py
