[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "blueftc"
version = "0.3.2"
authors = [
    {name = "Elias Ankerhold", email = "elias.ankerhold@aalto.fi"},
    {name = "Thomas Pfau", email = "thomas.pfau@aalto.fi"},
]
description = "Package to interact and control temperature controllers of BlueFors cryostats using HTTP GET and POST."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GPL-3.0-only",
]
dependencies = [
    "requests",
    "numpy",
]
